@@ -8,4 +8,6 @@
 #include <dolfin/parameter/ParameterSystem.h>
 #include <dolfin/parameter/parameters.h>
 
+#include <dolfin/parameter/Parameters.h>
+
 #endif
